--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo a string
-        run: echo 'Hello from a github action'
+        run: echjjo 'Hello from a github action'
       - name: multiline script
         run: |
           node -v
