Using pull request and schedule run

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,11 @@
 name: Actions Workflow
 
-on: [push]
+on:
+  # push:
+  pull_request:
+    types: [opened, reopened]
+  schedule:
+    - cron: "* * * * *"
 
 jobs:
     run-github-actions:
