Removed schedule run

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,11 +1,11 @@
 name: Actions Workflow
 
 on:
-  # push:
+  push:
   pull_request:
     types: [opened, reopened]
-  schedule:
-    - cron: "* * * * *"
+  # schedule:
+  #   - cron: "* * * * *"
 
 jobs:
     run-github-actions:
