--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,11 +1,11 @@
 name: Actions Workflow
 
 on:
-  push:
-  pull_request:
-    types: [opened, reopened]
-  # schedule:
-  #   - cron: "* * * * *"
+    push:
+    pull_request:
+        types: [opened, reopened]
+    # schedule:
+    #   - cron: "* * * * *"
 
 jobs:
     run-github-actions:
@@ -15,12 +15,13 @@ jobs:
               uses: actions/checkout@v3
             - name: List files
               run: |
-                pwd 
-                ls -l
-                echo $GITHUB_SHA
-                echo $GITHUB_REPOSITORY
-                echo $GITHUB_WORKSPACE
-                echo "${{ github.token }}"
+                  pwd 
+                  ls -l
+                  echo $GITHUB_SHA
+                  echo $GITHUB_REPOSITORY
+                  echo $GITHUB_WORKSPACE
+                  echo $GITHUB_REF
+                  echo "${{ github.token }}"
             - name: Simple JS action
               id: greet
               uses: actions/hello-world-javascript-action@v1
