--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -5,8 +5,11 @@ on: push
 jobs:
   hello-world:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node_version: [6,7,8]
+      fail-fast: true
     steps:
      - name: hello
-       id: hello
-       run: echo "Hello World"
+       run: node -v
      
