--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - name: echo command
-       run: echo "hello"
+       run: echo $GITHUB_REPOSITORY
