--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,5 +8,4 @@ jobs:
    steps:
     - name: running node command
       run: |
-        console.log('Hello, World')
-      shell: node
+        node ../../app.js
